fix in header logo alignment this fixes #2

--- a/src/aed.org.mt/wwwroot/css/site.css
+++ b/src/aed.org.mt/wwwroot/css/site.css
@@ -43,7 +43,14 @@ textarea {
 
     .navbar-inverse .navbar-brand {
         color: #fff;
+        padding: 0;
     }
+
+        .navbar-inverse .navbar-brand .text, .navbar-inverse .navbar-brand .image {
+            display: inline-block;
+            vertical-align: middle;
+            line-height: 50px;
+        }
 
     .navbar-inverse .navbar-nav > li > a {
         color: #fff;
